# django_bug_tracker

./: pyproject.toml
bug_tracker/: forms.py  settings.py  urls.py  views.py
bug_tracker/static/generic_form/: style.css
bug_tracker/static/home/: style.css
bug_tracker/static/ticketDetail/: style.css
bug_tracker/static/userPage/: style.css
bug_tracker/templates/: generic_form.html  home.html  ticket_detail.html  userPage.html
custom_user/: admin.py  models.py
custom_user/migrations/: 0001_initial.py
tracker_ticket/: admin.py  apps.py  models.py
tracker_ticket/migrations/: 0001_initial.py  0002_auto_20200213_1226.py  0003_auto_20200213_1238.py  0004_auto_20200213_1322.py  0005_auto_20200213_1349.py  0006_auto_20200213_1358.py  0007_auto_20200214_1138.py
